# src/main/resources/api/apispec.yaml
@@ -2,13 +2,20 @@ openapi: 3.0.3
 info:
   title: Sample Ecommerce App
   description: >
-    'This is a sample application model. It is based on an ecommerce model components'
+    'This is a ***sample ecommerce app API***.  You can find out more about Swagger at [swagger.io](http://swagger.io).
+    Description supports markdown markup. For example, you can use the `inline code` using back ticks.'
+  termsOfService: https://github.com/PacktPublishing/Modern-API-Development-with-Spring-and-Spring-Boot/blob/master/LICENSE
+  contact:
+    email: support@packtpub.com
+  license:
+    name: MIT
+    url: https://github.com/PacktPublishing/Modern-API-Development-with-Spring-and-Spring-Boot/blob/master/LICENSE
   version: 1.0.0
 externalDocs:
   description: Any document link you want to generate along with API.
-  url: https://swagger.io
-#servers: list of servers which the application is hosted
-#  - url: https://sambleurl
+  url: http://swagger.io
+servers:
+  - url: https://ecommerce.swagger.io/v2
 tags:
   - name: cart
     description: Everything about cart
@@ -17,15 +24,13 @@ tags:
       url: http://swagger.io
   - name: order
     description: Operation about orders
-  - name: user
-    description: Operations about users
   - name: customer
     description: Operations about user's persona customer
   - name: address
     description: Operations about user's address
   - name: payment
     description: Operations about payments
-  - name: shipping
+  - name: shipment
     description: Operations about shippings
   - name: product
     description: Operations about products
@@ -52,9 +57,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Cart'
+                $ref: '#/components/schemas/Cart'
         404:
           description: Given customer ID doesn't exist
           content: {}
@@ -191,9 +194,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Item'
+                $ref: '#/components/schemas/Item'
         404:
           description: Given item (product) ID doesn't exist
           content: {}
@@ -238,9 +239,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Order'
+                $ref: '#/components/schemas/Order'
         406:
           description: If payment is not authorized.
           content: {}
@@ -275,7 +274,7 @@ paths:
         - order
       summary: Returns the order of given order ID
       description: Returns orders of given order ID
-      operationId: getOrdersByOrderId
+      operationId: getByOrderId
       parameters:
         - name: id
           in: path
@@ -353,7 +352,7 @@ paths:
         - customer
       summary: Returns all customer's cards
       description: Returns all customer's cards based on given customer ID
-      operationId: getCardsByCustomerId
+      operationId: getCardByCustomerId
       parameters:
         - name: id
           in: path
@@ -494,7 +493,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Address'
+                $ref: '#/components/schemas/Card'
   /api/v1/cards/{id}:
     get:
       tags:
@@ -559,7 +558,7 @@ paths:
       description: Return the payment authorization for the specified order
       operationId: getOrdersPaymentAuthorization
       parameters:
-        - name: id
+        - name: orderId
           in: query
           description: Order Identifier
           required: true
@@ -571,9 +570,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Authorization'
+                $ref: '#/components/schemas/Authorization'
   /api/v1/shipping:
     post:
       tags:
@@ -595,13 +592,13 @@ paths:
                 $ref: '#/components/schemas/Authorization'
     get:
       tags:
-        - shipping
+        - shipment
       summary: Return the Shipment
       description: Return the Shipment for the specified order
       operationId: getShipmentByOrderId
       parameters:
         - name: id
-          in: query
+          in: path
           description: Order Identifier
           required: true
           schema:
@@ -687,6 +684,9 @@ components:
       description: Shopping Cart of the user
       type: object
       properties:
+        id:
+          description: Cart Identifier
+          type: string
         customerId:
           description: Id of the customer who possesses the cart
           type: string
@@ -708,8 +708,7 @@ components:
           format: int32
         unitPrice:
           description: The item's price per unit
-          type: number
-          format: double
+          type: BigDecimal
     Order:
       description: Represents an order
       type: object
@@ -734,8 +733,7 @@ components:
             $ref: '#/components/schemas/Item'
         total:
           description: Order total
-          type: number
-          format: double
+          type: BigDecimal
         payment:
           $ref: '#/components/schemas/Payment'
         shipment:
@@ -760,6 +758,9 @@ components:
     Address:
       type: object
       properties:
+        id:
+          description: Order identifier
+          type: string
         number:
           description: house of flat number
           type: string
@@ -784,14 +785,19 @@ components:
     Card:
       type: object
       properties:
+        id:
+          description: Order identifier
+          type: string
         cardNumber:
           description: Card Number
           type: string
         expires:
           description: Expiration date
           type: string
-        ccv:
-          description: CCV code
+        cvv:
+          description: CVV code
+          type: string
+        userId:
           type: string
     AddCardReq:
       description: Request object for new card registration.
@@ -800,10 +806,13 @@ components:
         - type: object
           properties:
             userId:
-              type: object
+              type: string
     Payment:
       type: object
       properties:
+        id:
+          description: Order identifier
+          type: string
         authorized:
           description: Flag that specified whether payment is authorized or not
           type: boolean
@@ -813,8 +822,8 @@ components:
     Shipment:
       type: object
       properties:
-        orderId:
-          description: Order Identifier
+        id:
+          description: Shipment Identifier
           type: string
         carrier:
           description: Shipping Carrier
@@ -844,8 +853,7 @@ components:
       type: object
       properties:
         id:
-          type: integer
-          format: int64
+          type: string
         username:
           type: string
         firstName:
@@ -859,25 +867,22 @@ components:
         phone:
           type: string
         userStatus:
-          type: integer
-          description: User Status
-          format: int32
+          type: string
     NewOrder:
       description: Contains the new order request information
       type: object
       properties:
-        customer:
-          #description: URI that should be used to fetch the customer
-          $ref: '#/components/schemas/URI'
+        customerId:
+          type: string
         address:
-          #description: URI that should be used to fetch the address
-          $ref: '#/components/schemas/URI'
+          $ref: '#/components/schemas/Address'
         card:
-          #description: URI that should be used to fetch the payment card
-          $ref: '#/components/schemas/URI'
+          $ref: '#/components/schemas/Card'
         items:
-          #description: URI that should be used to fetch the items from shopping cart
-          $ref: '#/components/schemas/URI'
+          description: Items in shopping cart
+          type: array
+          items:
+            $ref: '#/components/schemas/Item'
     URI:
       type: object
     Authorization:
@@ -914,8 +919,7 @@ components:
           $ref: '#/components/schemas/Card'
         amount:
           description: Payment amount
-          type: number
-          format: double
+          type: BigDecimal
     CustomerInfoOnCard:
       description: Customer information required for payment processing
       type: object
@@ -944,8 +948,7 @@ components:
           type: string
         price:
           description: Product price
-          type: number
-          format: double
+          type: BigDecimal
         count:
           description: Product count
           type: integer
@@ -953,6 +956,15 @@ components:
         tag:
           description: Tags associated with the product
           type: array
-          uniqueItems: true
           items:
-            type: string
+            $ref: '#/components/schemas/Tag'
+    Tag:
+      description: Tag information
+      type: object
+      properties:
+        id:
+          description: Tag identifier
+          type: string
+        name:
+          description: Tag Name
+          type: string
